{
    "name": "InputActions",
    "maps": [
        {
            "name": "Touch",
            "id": "2213e1d4-6c11-4e80-abd4-1484c46d5254",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "e3232293-2a26-4186-bd76-ba475f4db8f9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchRelease",
                    "type": "Button",
                    "id": "2b7efca5-b965-49c1-92e7-e882bb6c2928",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "7a194650-4f81-4286-be2e-64c830ae8ec4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "995c11d5-46cd-4972-a486-166fd8dd7ac7",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9694b8d-17db-410f-8a55-4bce31ace61d",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3bb77987-8fa8-4255-b0bd-c1d856e73f6e",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}